# nextjournal-ocaml

./: .gitignore  Dockerfile  Dockerfile.nj  Makefile  README.md  jbuild-workspace  nextjournal-ocaml.opam  prelude.ml
examples/: ex1.ml  ex2.ml  jbuild
src/: eval.ml  jbuild  nextjournal_ocaml.ml  socket_server.ml  socket_server2.ml  unrepl.ml  unrepl.mli
test/: jbuild  ocaml_eval_test.ml
