opam-version: "1.2"
name: "nextjournal-ocaml"
version: "0.0.0"
maintainer: "Patrick Stapfer <ryyppy@users.noreply.github.com>"
authors: "Patrick Stapfer <ryyppy@users.noreply.github.com>"
license: "MIT"
dev-repo: "https://github.com/ryyppy/nextjournal-ocaml.git"
build: [
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "nextjournal-ocaml"]
depends: [
  "jbuilder" {build & >= "1.0+beta20"}
  "ocamlfind" {build}
  "reason"
  "ocaml-compiler-libs" {>= "10.0.0"}
  "lwt" {>= "3.0.0"}
  "yojson" {>= "1.3.3"}
]
